Clean up styles, add licensing and installation info.

--- a/src/Index.html
+++ b/src/Index.html
@@ -12,9 +12,11 @@
     <div class="content">
         <h1 class="title-main">Thinking in C</h1>
         <p class="subtitle">Foundations for Java and C++ <br />by Chuck Allison</p>
-        <p class="web-link">© 2002 MindView, Inc. <a href="http://www.MindView.net">http://www.MindView.net</a></p>
-        <p class="note"><strong>Note</strong>: Please click <a href="Install.htm">here</a> if you haven't performed the
-            installation. Please read the <a href="license.htm">license agreement</a>.</p>
+        <p class="web-link">©2002, ©2023 <a href="https://www.mindviewllc.com/">MindView LLC</a>.</p>
+        <p class="note">To install, download and unpack the release from the <a href="Install.htm">Github
+                repository</a>, then open <i>index.html</i> in your web browser.</p>
+        <p class="note">License: <a href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons CC
+                BY-ND</a> <img src="by-nd.png" alt="Creative Commons CC BY-ND" width="70"></p>
         <h2 class="table-title" id="TOC">Table of Contents</h2>
         <ul class="table-of-contents">
             <li><a href="#Chapter1">Chapter 1: Introduction and Getting Started</a></li>
@@ -39,10 +41,7 @@
             <li><a href="#Chapter9b">Chapter 9b: A first look at C++</a></li>
             <li><a href="#Chapter9bExercises">Chapter 9b Exercises</a></li>
             <li><a href="#MovingOn">Where to go next ...</a></li>
-            <li><a href="#SourceCode">Source code for examples, exercises and solutions</a></li>
-            <li><a href="#BookResources">Book Resources</a></li>
             <li><a href="#Compilers">Compilers</a></li>
-            <li><a href="#TechnicalSupport">Troubleshooting</a></li>
         </ul>
     </div>
     <div class="chapter-container">
