Rearrange and fix more links

--- a/src/Index.html
+++ b/src/Index.html
@@ -76,11 +76,11 @@
                 <a class="code-link" href="code/chapter1/avg.c">avg.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln1.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln1.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln1/avg.htm"> avg.out </a>
+                <a class="code-link" href="code/chapter1/solution/avg.out"> avg.out </a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -112,16 +112,16 @@
             <p> In this exercise you will learn to round to the nearest integer. (A full description is
                 given at the end of the Chapter 2 lecture.) </p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter2/float.htm">float.c</a>
-                <a class="code-link" href="code/chapter2/limits.htm">limits.c</a>
-                <a class="code-link" href="code/chapter2/missing.htm">missing.c</a>
+                <a class="code-link" href="code/chapter2/float.c">float.c</a>
+                <a class="code-link" href="code/chapter2/limits.c">limits.c</a>
+                <a class="code-link" href="code/chapter2/missing.c">missing.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln2.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln2.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln2/lab2.htm">lab2.c</a>
+                <a class="code-link" href="code/chapter2/solution/lab2.c">lab2.c</a>
             </div>
         </div>
         <div class="back-to-toc">
@@ -160,14 +160,14 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter3/bitwise.htm">bitwise.c</a>
+                <a class="code-link" href="code/chapter3/bitwise.c">bitwise.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln3.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln3.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln3/lab3.htm">lab3.c</a>
+                <a class="code-link" href="code/chapter3/solution/lab3.c">lab3.c</a>
             </div>
         </div>
         <div class="back-to-toc">
@@ -211,17 +211,17 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter4/age.htm">age.c</a>
-                <a class="code-link" href="code/chapter4/age2.htm">age2.c</a>
-                <a class="code-link" href="code/chapter4/branch.htm">branch.c</a>
+                <a class="code-link" href="code/chapter4/age.c">age.c</a>
+                <a class="code-link" href="code/chapter4/age2.c">age2.c</a>
+                <a class="code-link" href="code/chapter4/branch.c">branch.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln4.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln4.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln4/lab4.htm">lab4.c</a>
-                <a class="code-link" href="code/Soln4/lab4a.htm">lab4a.c</a>
+                <a class="code-link" href="code/chapter4/solution/lab4.c">lab4.c</a>
+                <a class="code-link" href="code/chapter4/solution/lab4a.c">lab4a.c</a>
             </div>
         </div>
         <div class="back-to-toc">
@@ -258,20 +258,20 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter5/2d.htm">2d.c</a>
-                <a class="code-link" href="code/chapter5/3d.htm">3d.c</a>
-                <a class="code-link" href="code/chapter5/3d2.htm">3d2.c</a>
-                <a class="code-link" href="code/chapter5/reverse.htm">reverse.c</a>
-                <a class="code-link" href="code/chapter5/strings.htm">strings.c</a>
-                <a class="code-link" href="code/chapter5/struct.htm">struct.c</a>
-                <a class="code-link" href="code/chapter5/struct2.htm">struct2.c</a>
+                <a class="code-link" href="code/chapter5/2d.c">2d.c</a>
+                <a class="code-link" href="code/chapter5/3d.c">3d.c</a>
+                <a class="code-link" href="code/chapter5/3d2.c">3d2.c</a>
+                <a class="code-link" href="code/chapter5/reverse.c">reverse.c</a>
+                <a class="code-link" href="code/chapter5/strings.c">strings.c</a>
+                <a class="code-link" href="code/chapter5/struct.c">struct.c</a>
+                <a class="code-link" href="code/chapter5/struct2.c">struct2.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln5.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln5.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln5/lab5.htm">lab5.c</a>
+                <a class="code-link" href="code/chapter5/solution/lab5.c">lab5.c</a>
             </div>
         </div>
         <div class="back-to-toc">
@@ -311,27 +311,27 @@
                 exercises):
             </p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter6/employeeh.htm">employee.h</a>
-                <a class="code-link" href="code/chapter6/file1.htm">file1.c</a>
-                <a class="code-link" href="code/chapter6/file2.htm">file2.c</a>
-                <a class="code-link" href="code/chapter6/fun1.htm">fun1.c</a>
-                <a class="code-link" href="code/chapter6/fun2.htm">fun2.c</a>
-                <a class="code-link" href="code/chapter6/fun3.htm">fun3.c</a>
-                <a class="code-link" href="code/chapter6/lab6.htm">lab6.c</a>
-                <a class="code-link" href="code/chapter6/scope.htm">scope.c</a>
-                <a class="code-link" href="code/chapter6/stack.htm">stack.c</a>
-                <a class="code-link" href="code/chapter6/stackh.htm">stack.h</a>
-                <a class="code-link" href="code/chapter6/static.htm">static.c</a>
-                <a class="code-link" href="code/chapter6/tstack.htm">tstack.c</a>
+                <a class="code-link" href="code/chapter6/employeeh.h">employee.h</a>
+                <a class="code-link" href="code/chapter6/file1.c">file1.c</a>
+                <a class="code-link" href="code/chapter6/file2.c">file2.c</a>
+                <a class="code-link" href="code/chapter6/fun1.c">fun1.c</a>
+                <a class="code-link" href="code/chapter6/fun2.c">fun2.c</a>
+                <a class="code-link" href="code/chapter6/fun3.c">fun3.c</a>
+                <a class="code-link" href="code/chapter6/lab6.c">lab6.c</a>
+                <a class="code-link" href="code/chapter6/scope.c">scope.c</a>
+                <a class="code-link" href="code/chapter6/stack.c">stack.c</a>
+                <a class="code-link" href="code/chapter6/stackh.h">stack.h</a>
+                <a class="code-link" href="code/chapter6/static.c">static.c</a>
+                <a class="code-link" href="code/chapter6/tstack.c">tstack.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln6.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln6.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln6/employee.htm">employee.c</a>
-                <a class="code-link" href="code/Soln6/employeeh.htm">employee.h</a>
-                <a class="code-link" href="code/Soln6/lab6.htm">lab6.c</a>
+                <a class="code-link" href="code/chapter6/solution/employee.c">employee.c</a>
+                <a class="code-link" href="code/chapter6/solution/employee.h">employee.h</a>
+                <a class="code-link" href="code/chapter6/solution/lab6.c">lab6.c</a>
             </div>
             <div class="back-to-toc">
                 <a href="#TOC">Back to Table of Contents</a>
@@ -370,22 +370,22 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter7/echo.htm">echo.c</a>
-                <a class="code-link" href="code/chapter7/employ2h.htm">employ2.h</a>
-                <a class="code-link" href="code/chapter7/indirect.htm">indirect.c</a>
-                <a class="code-link" href="code/chapter7/lab7.htm">lab7.c</a>
-                <a class="code-link" href="code/chapter7/reverse2.htm">reverse2.c</a>
-                <a class="code-link" href="code/chapter7/structarg.htm">structarg.c</a>
-                <a class="code-link" href="code/chapter7/swap.htm">swap.c</a>
+                <a class="code-link" href="code/chapter7/echo.c">echo.c</a>
+                <a class="code-link" href="code/chapter7/employ2h.c">employ2.h</a>
+                <a class="code-link" href="code/chapter7/indirect.c">indirect.c</a>
+                <a class="code-link" href="code/chapter7/lab7.c">lab7.c</a>
+                <a class="code-link" href="code/chapter7/reverse2.c">reverse2.c</a>
+                <a class="code-link" href="code/chapter7/structarg.c">structarg.c</a>
+                <a class="code-link" href="code/chapter7/swap.c">swap.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln7.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln7.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln7/employ2.htm">employ2.c</a>
-                <a class="code-link" href="code/Soln7/employ2h.htm">employ2.h</a>
-                <a class="code-link" href="code/Soln7/lab7.htm">lab7.c</a>
+                <a class="code-link" href="code/chapter7/solution/employ2.c">employ2.c</a>
+                <a class="code-link" href="code/chapter7/solution/employ2.h">employ2.h</a>
+                <a class="code-link" href="code/chapter7/solution/lab7.c">lab7.c</a>
             </div>
             <div class="back-to-toc">
                 <a href="#TOC">Back to Table of Contents</a>
@@ -422,21 +422,21 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter8a/Array1.htm">Array1.java</a>
-                <a class="code-link" href="code/chapter8a/Array2.htm">Array2.java</a>
-                <a class="code-link" href="code/chapter8a/Array3.htm">Array3.java</a>
-                <a class="code-link" href="code/chapter8a/Average.htm">Average.java</a>
-                <a class="code-link" href="code/chapter8a/Employee.htm">Employee.java</a>
-                <a class="code-link" href="code/chapter8a/Hello.htm">Hello.java</a>
-                <a class="code-link" href="code/chapter8a/Label.htm">Label.java</a>
-                <a class="code-link" href="code/chapter8a/Limits.htm">Limits.java</a>
+                <a class="code-link" href="code/chapter8a/Array1.java">Array1.java</a>
+                <a class="code-link" href="code/chapter8a/Array2.java">Array2.java</a>
+                <a class="code-link" href="code/chapter8a/Array3.java">Array3.java</a>
+                <a class="code-link" href="code/chapter8a/Average.java">Average.java</a>
+                <a class="code-link" href="code/chapter8a/Employee.java">Employee.java</a>
+                <a class="code-link" href="code/chapter8a/Hello.java">Hello.java</a>
+                <a class="code-link" href="code/chapter8a/Label.java">Label.java</a>
+                <a class="code-link" href="code/chapter8a/Limits.java">Limits.java</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln8a.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln8a.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln8a/Stack.htm">Stack.java</a>
+                <a class="code-link" href="code/chapter8a/solution/Stack.java">Stack.java</a>
             </div>
             <div class="back-to-toc">
                 <a href="#TOC">Back to Table of Contents</a>
@@ -476,27 +476,27 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter8b/bitwise2.htm">bitwise2.c</a>
-                <a class="code-link" href="code/chapter8b/fptr.htm">fptr.c</a>
-                <a class="code-link" href="code/chapter8b/fptr2.htm">fptr2.c</a>
-                <a class="code-link" href="code/chapter8b/parith.htm">parith.c</a>
-                <a class="code-link" href="code/chapter8b/parray.htm">parray.c</a>
-                <a class="code-link" href="code/chapter8b/pptr.htm">pptr.c</a>
-                <a class="code-link" href="code/chapter8b/qsort.htm">qsort.c</a>
-                <a class="code-link" href="code/chapter8b/stack8b.htm">stack8b.c</a>
-                <a class="code-link" href="code/chapter8b/stack8bh.htm">stack8b.h</a>
-                <a class="code-link" href="code/chapter8b/ulimits.htm">ulimits.c</a>
+                <a class="code-link" href="code/chapter8b/bitwise2.c">bitwise2.c</a>
+                <a class="code-link" href="code/chapter8b/fptr.c">fptr.c</a>
+                <a class="code-link" href="code/chapter8b/fptr2.c">fptr2.c</a>
+                <a class="code-link" href="code/chapter8b/parith.c">parith.c</a>
+                <a class="code-link" href="code/chapter8b/parray.c">parray.c</a>
+                <a class="code-link" href="code/chapter8b/pptr.c">pptr.c</a>
+                <a class="code-link" href="code/chapter8b/qsort.c">qsort.c</a>
+                <a class="code-link" href="code/chapter8b/stack8b.c">stack8b.c</a>
+                <a class="code-link" href="code/chapter8b/stack8bh.h">stack8b.h</a>
+                <a class="code-link" href="code/chapter8b/ulimits.c">ulimits.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln8b.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln8b.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln8b/employ2.htm">employ2.c</a>
-                <a class="code-link" href="code/Soln8b/employ2h.htm">employ2.h</a>
-                <a class="code-link" href="code/Soln8b/lab8-1.htm">lab8-1.c</a>
-                <a class="code-link" href="code/Soln8b/lab8-2.htm">lab8-2.c</a>
-                <a class="code-link" href="code/Soln8b/lab8-3.htm">lab8-3.c</a>
+                <a class="code-link" href="code/chapter8b/solution/employ2.c">employ2.c</a>
+                <a class="code-link" href="code/chapter8b/solution/employ2.h">employ2.h</a>
+                <a class="code-link" href="code/chapter8b/solution/lab8-1.c">lab8-1.c</a>
+                <a class="code-link" href="code/chapter8b/solution/lab8-2.c">lab8-2.c</a>
+                <a class="code-link" href="code/chapter8b/solution/lab8-3.c">lab8-3.c</a>
             </div>
             <div class="back-to-toc">
                 <a href="#TOC">Back to Table of Contents</a>
@@ -539,21 +539,21 @@
             <p>Here are the source-code files for the exercises (use these as a starting point for solving the
                 exercises):</p>
             <div class="code-links">
-                <a class="code-link" href="code/chapter9b/hello.htm">hello.cpp</a>
-                <a class="code-link" href="code/chapter9b/intstack.htm">intstack.cpp</a>
-                <a class="code-link" href="code/chapter9b/intstackh.htm">intstack.h</a>
-                <a class="code-link" href="code/chapter9b/stack9bh.htm">stack9b.h</a>
-                <a class="code-link" href="code/chapter9b/tintstack.htm">tintstack.cpp</a>
-                <a class="code-link" href="code/chapter9b/tstack9b.htm">tstack9b.cpp</a>
+                <a class="code-link" href="code/chapter9b/hello.cpp">hello.cpp</a>
+                <a class="code-link" href="code/chapter9b/intstack.cpp">intstack.cpp</a>
+                <a class="code-link" href="code/chapter9b/intstackh.h">intstack.h</a>
+                <a class="code-link" href="code/chapter9b/stack9bh.h">stack9b.h</a>
+                <a class="code-link" href="code/chapter9b/tintstack.cpp">tintstack.cpp</a>
+                <a class="code-link" href="code/chapter9b/tstack9b.cpp">tstack9b.cpp</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" href="lectures/Soln9b.htm">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln9b.htm">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
-                <a class="code-link" href="code/Soln9b/employee.htm">employee.cpp</a>
-                <a class="code-link" href="code/Soln9b/employeeh.htm">employee.h</a>
-                <a class="code-link" href="code/Soln9b/lab9.htm">lab9.cpp</a>
+                <a class="code-link" href="code/chapter9b/solution/employee.cpp">employee.cpp</a>
+                <a class="code-link" href="code/chapter9b/solution/employee.h">employee.h</a>
+                <a class="code-link" href="code/chapter9b/solution/lab9.cpp">lab9.cpp</a>
             </div>
             <div class="back-to-toc">
                 <a href="#TOC">Back to Table of Contents</a>
