adjustments and final slide discovery

--- a/src/Index.html
+++ b/src/Index.html
@@ -541,8 +541,8 @@
             <div class="code-links">
                 <a class="code-link" href="code/chapter9b/hello.cpp">hello.cpp</a>
                 <a class="code-link" href="code/chapter9b/intstack.cpp">intstack.cpp</a>
-                <a class="code-link" href="code/chapter9b/intstackh.h">intstack.h</a>
-                <a class="code-link" href="code/chapter9b/stack9bh.h">stack9b.h</a>
+                <a class="code-link" href="code/chapter9b/intstack.h">intstack.h</a>
+                <a class="code-link" href="code/chapter9b/stack9b.h">stack9b.h</a>
                 <a class="code-link" href="code/chapter9b/tintstack.cpp">tintstack.cpp</a>
                 <a class="code-link" href="code/chapter9b/tstack9b.cpp">tstack9b.cpp</a>
             </div>
