--- a/src/Index.html
+++ b/src/Index.html
@@ -13,7 +13,8 @@
         <h1 class="title-main">Thinking in C</h1>
         <p class="subtitle">Foundations for Java and C++ <br />by Chuck Allison</p>
         <p class="web-link">©2002, ©2023 <a href="https://www.mindviewllc.com/">MindView LLC</a>.</p>
-        <p class="note">To install, download and unpack the release from the <a href="Install.html">Github
+        <p class="note">To install, download and unzip the release from the <a
+                href="https://github.com/BruceEckel/ThinkingInC/releases">Github
                 repository</a>, then open <i>index.html</i> in your web browser.</p>
         <p class="note">License: <a href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons CC
                 BY-ND</a> <img src="by-nd.png" alt="Creative Commons CC BY-ND" width="70"></p>
