--- a/src/lectures/soln9b/slides.html
+++ b/src/lectures/soln9b/slides.html
@@ -12,9 +12,9 @@
     <body>
         <img id="slideImage" alt="Slide" style="max-width: 100%; max-height: 80vh; margin: auto;">
         <br/>
-        <button onclick="previousSlide()">Previous</button>
-        <button onclick="nextSlide()">Next</button>
-        <audio id="slideAudio" controls autoplay style="width: 600px; margin-left: 1em;"></audio>
+        <button id="previousButton" onclick="previousSlide()">Previous</button>
+        <button id="nextButton" onclick="nextSlide()">Next</button>
+        <audio id="slideAudio" controls style="width: 600px; margin-left: 1em;"></audio>
         <button onclick="goHome()">Home</button>
         <script>
             const slides = [{"svg": "Slide01.svg", "mp3": "Slide01.mp3"}, {"svg": "Slide02.svg", "mp3": "Slide02.mp3"}, {"svg": "Slide03.svg", "mp3": "Slide03.mp3"}, {"svg": "Slide04.svg", "mp3": "Slide04.mp3"}, {"svg": "Slide05.svg", "mp3": "Slide05.mp3"}, {"svg": "Slide06.svg", "mp3": "Slide06.mp3"}, {"svg": "Slide07.svg", "mp3": "Slide07.mp3"}];
@@ -26,6 +26,7 @@
                 document.getElementById('slideAudio').src = slide.mp3;
                 currentSlide = index;
                 document.getElementById('slideAudio').play();
+                updateNavigationButtons();
             }
 
             function nextSlide() {
@@ -40,13 +41,21 @@
                 }
             }
 
+            function updateNavigationButtons() {
+                document.getElementById('previousButton').style.display = currentSlide === 0 ? 'none' : 'inline';
+                document.getElementById('nextButton').style.display = currentSlide === slides.length - 1 ? 'none' : 'inline';
+            }
+
             function goHome() {
                 window.location.href = '../../Index.html';
             }
 
             document.getElementById('slideAudio').addEventListener('ended', nextSlide);
 
-            window.onload = () => showSlide(0);
+            window.onload = () => {
+                showSlide(0);
+                updateNavigationButtons();
+            };
         </script>
     </body>
     </html>
