Don't open new window for new lecture

--- a/src/Index.html
+++ b/src/Index.html
@@ -53,7 +53,7 @@
             </h2>
             <p class="chapter-duration">40 Minutes and 16 seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap1/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap1/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -77,7 +77,7 @@
                 <a class="code-link" target="_blank" href="code/chapter1/avg.c">avg.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln1/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln1/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -94,7 +94,7 @@
             </h2>
             <p class="chapter-duration">40 Minutes and 25 seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap2/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap2/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -118,7 +118,7 @@
                 <a class="code-link" target="_blank" href="code/chapter2/missing.c">missing.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln2/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln2/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -137,7 +137,7 @@
             </h2>
             <p class="chapter-duration">21 Minutes and 22 seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap3/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap3/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -164,7 +164,7 @@
                 <a class="code-link" target="_blank" href="code/chapter3/bitwise.c">bitwise.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln3/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln3/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -184,7 +184,7 @@
             </h2>
             <p class="chapter-duration">23 Minutes and 48 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap4/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap4/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -217,7 +217,7 @@
                 <a class="code-link" target="_blank" href="code/chapter4/branch.c">branch.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln4/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln4/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -237,7 +237,7 @@
             </h2>
             <p class="chapter-duration">35 Minutes and 19 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap5/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap5/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -268,7 +268,7 @@
                 <a class="code-link" target="_blank" href="code/chapter5/struct2.c">struct2.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln5/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln5/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -288,7 +288,7 @@
             </h2>
             <p class="chapter-duration">40 Minutes and 38 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap6/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap6/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -326,7 +326,7 @@
                 <a class="code-link" target="_blank" href="code/chapter6/tstack.c">tstack.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln6/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln6/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -348,7 +348,7 @@
             </h2>
             <p class="chapter-duration">44 Minutes and 55 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap7/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap7/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -380,7 +380,7 @@
                 <a class="code-link" target="_blank" href="code/chapter7/swap.c">swap.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln7/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln7/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -402,7 +402,7 @@
             </h2>
             <p class="chapter-duration">46 Minutes and 27 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap8a/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap8a/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -433,7 +433,7 @@
                 <a class="code-link" target="_blank" href="code/chapter8a/Limits.java">Limits.java</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln8a/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln8a/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -453,7 +453,7 @@
             </h2>
             <p class="chapter-duration">1 Hour, 19 Minutes and 28 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap8b/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap8b/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -489,7 +489,7 @@
                 <a class="code-link" target="_blank" href="code/chapter8b/ulimits.c">ulimits.c</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln8b/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln8b/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
@@ -513,7 +513,7 @@
             </h2>
             <p class="chapter-duration">36 Minutes and 29 Seconds</p>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/chap9b/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/chap9b/slides.html">Start Lecture</a>
             </div>
             <a class="back-to-toc" href="#TOC">Back to Table of Contents</a>
         </div>
@@ -548,7 +548,7 @@
                 <a class="code-link" target="_blank" href="code/chapter9b/tstack9b.cpp">tstack9b.cpp</a>
             </div>
             <div class="lecture-links">
-                <a class="lecture-link" target="_blank" href="lectures/soln9b/slides.html">Start Lecture</a>
+                <a class="lecture-link" href="lectures/soln9b/slides.html">Start Lecture</a>
             </div>
             <p>Here are the source-code files for the exercise solutions:</p>
             <div class="code-links">
