--- a/src/Index.html
+++ b/src/Index.html
@@ -16,7 +16,7 @@
         <p class="note">To install: download and unzip the release from the <a
                 href="https://github.com/BruceEckel/ThinkingInC/releases">Github
                 repository</a>, then open <i>index.html</i> in your web browser.</p>
-        <p class="note">License: <a href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons CC
+        <p class="note">License: <a href="https://creativecommons.org/licenses/by-nd/4.0/" target="_blank">Creative Commons CC
                 BY-ND</a> <img src="by-nd.png" alt="Creative Commons CC BY-ND" width="70"></p>
         <h2 class="table-title" id="TOC">Table of Contents</h2>
         <ul class="table-of-contents">
